# stock

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROBLEM_SOLVED.md  PROJECT_IMPLEMENTATION_ROADMAP.md  PROJECT_OVERVIEW_V2.5.md  PROJECT_ROADMAP.md  PROJECT_STATUS_UPDATE.md  QUICK_START_DEPLOYMENT.md  QUICK_START_GUIDE.md  QUICK_START_V2.4.md  README.md  README_V2.md  ROADMAP.md  SECURITY.md  STRATEGY_MODULARIZATION_COMPLETED.md  UNIFIED_PLOT_QUICKSTART.md  V2.4.0_FINAL_REPORT.md  backtest_gui.py  check_upgrade.py  clear_cache.py  config.py  config.yaml.example  constraints.txt  data_manager.py  debug_amount_flow.py  docker-compose.yml  emergency_config.py  emergency_fix.py  launcher.py  main.py  (+29 more)
.claude/: settings.local.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  stale.yml
datacache/: stock_data.db
deploy/k8s/: platform-api-deployment.yaml  platform-api-service.yaml
docs/: ADJ_TYPE_EXPLANATION.md  AI_FRAMEWORK_INTEGRATION.md  ALL_STRATEGIES_LOT_FIX.md  API_REFERENCE.md  API_REFERENCE.py  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_OPTIMIZATION_V2.8.6.3.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SUMMARY.md  ARCHITECTURE_TARGET_STATE.md  ARCHITECTURE_UPGRADE.md  BACKTRADER_PLOTTING_ENHANCEMENTS.md  BROKER_ACCOUNT_GUIDE.md  CACHE_SYSTEM_GUIDE.md  CHART_USAGE_GUIDE.md  COMMERCIAL_GAP_ASSESSMENT.md  COMMERCIAL_UPGRADE_ROADMAP.md  COMMISSION_CALCULATION_EXPLAINED.md  DATABASE_PREVIEW_GUIDE.md  DATABASE_PREVIEW_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DONCHIAN_STRATEGY_FIX.md  FEATURE_ENHANCEMENT_KDJ_MACD.md  FINAL_TRADING_RULES_V3.md  FIX_AMOUNT_UNIT.md  FIX_TUPLE_LOWER_ERROR.md  GATEWAY_SDK_SETUP.md  GRID_SEARCH_AUTO_ANALYSIS.md  GRID_SEARCH_ERROR_FIX.md  GUI_ERROR_FIX.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_README.md  GUI_USAGE_GUIDE.md  GUI_USER_GUIDE.md  GUI_V2.8.1_UPDATE.md  GUI_V2.8.2_QUICK_START.md  GUI_V2.8.2_UPDATE.md  HOTFIX_AMOUNT_CACHE.md  LIVE_TRADING_API.md  LOGGING_SYSTEM.md  (+100 more)
docs/api/: python-sdk.md  rest-api.md  strategy-api.md
docs/architecture/: open-platform.md  overview.md  security.md  v5-upgrade.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: backtesting.md  live-gateway-stub.md  strategy-admission.md  web-console.md
docs/operations/: deployment.md  monitoring.md  troubleshooting.md
examples/: README.md  batch_backtest.py  ml_enhanced_examples.py  ml_strategy_gallery.py  mlops_inference_demo.py  mlops_training_registry_demo.py  one_click_demo.py  quick_start.py
examples/plugins/simple_momentum_plugin/: README.md  pyproject.toml
examples/plugins/simple_momentum_plugin/simple_momentum_plugin/: __init__.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
quant_platform_adapters_cn/: __init__.py
quant_platform_cli/: __init__.py  backtest.py
quant_platform_core/: __init__.py
quant_platform_ml/: __init__.py  inference.py  registry.py  training.py
quant_platform_sdk/: __init__.py
quant_platform_web/: __init__.py  cli.py
report/601318_macd_20251026_214028/: backtest_result.pkl
sample_data/: README.md  a_share_demo_ohlcv.csv
scripts/: README.md  audit_integrity_check.py  backtest_gui.py  backup_database.py  benchmark_platform.py  capture_frontend_previews.py  demo_platform_console.py  deploy_release.py  generate_demo_gif.py  gui_config_example.json  health_check.py  local_ci.ps1  local_ci.py  preflight_check.py  preflight_experiment_platform.py  qlib_get_data.py  render_readme_preview.py  run_platform_api.py  run_web_console.py  start_production.bat  start_production.py  start_production.sh  test_gui_validation.py  train_finrl.py  train_qlib.py
src/: __init__.py  config.py
src/_legacy/: __init__.py
src/adapters/: __init__.py
src/backtest/: __init__.py  admission.py  admission_gates.py  analysis.py  attribution.py  backtrader_adapter.py  engine.py  engine_base.py  plotting.py  report_generator.py  repro.py  simple_engine.py  strategy_modules.py  zipline_bundle.py
src/bt_plugins/: __init__.py  base.py  (+1 more)
templates/cookiecutter-plugin/{{cookiecutter.plugin_slug}}/: README.md  pyproject.toml
templates/cookiecutter-plugin/{{cookiecutter.plugin_slug}}/{{cookiecutter.package_name}}/: __init__.py
test/: test_akshare_cache.py  test_amount_e2e.py  test_backtrader_fix.py  test_cache_system.py  test_db_name_feature.py  test_db_preview.py  test_enhanced_plotting.py  test_final_verification.py  test_integration_simulation.py  test_interactive_flow.py  test_multi_source.py  test_network.py  test_plotting_fix.py  test_real_world.py  test_simulation.py  test_sina_direct.py  test_sqlite_v2_integration.py  test_sqlite_v2_schema.py  test_strategy_registry.py  test_tushare_source.py  test_yfinance_source.py  verify_fresh_import.py
test_cache_temp/: market_data.db
test_output_kdj/: run_nav.csv
tests/: README.md  __init__.py  test_adapters_convergence.py  test_analysis.py  test_analysis_mvp.py  test_api_v2_accounts.py  test_api_v2_observability.py  test_attribution_metrics.py  test_audit_integrity_script.py  test_audit_log.py  test_auth_rbac.py  test_backtest.py  test_backtest_gui_builders.py  test_backtest_performance.py  test_calendar_quality.py  test_capital_allocator.py  test_cli_gateway_capabilities.py  test_combo_optimizer.py  test_config_schema.py  test_consistency_modes.py  test_core.py  test_data.py  test_data_lake_versioning.py  test_data_portal.py  test_distribution_split.py  test_dr_restore.py  test_e2e_workflows.py  test_eastmoney_provider.py  test_engine.py  test_engine_backends.py  test_fault_scenarios.py  test_frontend_local_dev.py  test_fundamental_factors.py  test_fundamental_filter.py  test_gateway_mock_sdk.py  test_gateway_provider_routing.py  test_gateway_service_risk.py  test_gateway_state_machine.py  test_gateway_uft_integration.py  test_gateway_uft_smoke.py  (+66 more)
(+274 files in other folders)
