[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-stock"
version = "5.0.0"
description = "Unified Quant Platform — quantitative trading & backtesting system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Quant Platform Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "sortedcontainers>=2.4.0",
    "exchange_calendars>=4.5.0",
    "backtrader>=1.9.76",
    "matplotlib>=3.5.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Web API layer
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
# Performance extensions
perf = [
    "duckdb>=0.9.0",
    "polars>=0.20.0",
    "numba>=0.58.0",
]
# ML/AI pipeline
ml = [
    "torch>=2.1.0",
    "finrl>=0.3.7",
    "qlib>=0.9.2",
    "lightgbm>=4.0.0",
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    "scikit-learn>=1.3.0",
]
# Live trading gateways
live = [
    "websocket-client>=1.6.0",
]
# Security / encryption
security = [
    "cryptography>=41.0.0",
]
# System monitoring
monitoring = [
    "psutil>=5.9.0",
]
# Development / testing
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]
# Everything
all = [
    "quant-stock[api,perf,ml,live,security,monitoring,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/magic-alt/stock"
Documentation = "https://magic-alt.github.io/stock/"
Repository = "https://github.com/magic-alt/stock"

[project.scripts]
quant-platform = "src.cli.main:main"

# ---------------------------------------------------------------------------
# V6 Open Platform plugin entry-point groups (declared in Phase 0).
#
# Third-party distributions register plugins by adding entries to these
# groups in their own pyproject.toml, e.g.:
#
#   [project.entry-points."quant_platform.strategy"]
#   my_macd = "my_pkg.strategies:MacdStrategy"
#
# The groups below are intentionally empty in this repository at Phase 0;
# in-tree implementations will be progressively registered through
# Phases 3-5. See docs/architecture/open-platform.md.
# ---------------------------------------------------------------------------
[project.entry-points."quant_platform.strategy"]
[project.entry-points."quant_platform.indicator"]
[project.entry-points."quant_platform.factor"]
[project.entry-points."quant_platform.data_provider"]
[project.entry-points."quant_platform.realtime_feed"]
[project.entry-points."quant_platform.gateway"]
[project.entry-points."quant_platform.storage"]
[project.entry-points."quant_platform.risk_rule"]
[project.entry-points."quant_platform.fill_model"]
[project.entry-points."quant_platform.report"]
[project.entry-points."quant_platform.scheduler"]
[project.entry-points."quant_platform.ml_adapter"]
[project.entry-points."quant_platform.messaging"]
[project.entry-points."quant_platform.admission_gate"]

[tool.setuptools.packages.find]
include = ["src*", "quant_platform_*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120
fix = false

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",
    "E402",
    "W291",
    "W292",
    "W293",
    "E701",
    "E702",
    "E722",
    "E741",
    "F401",
    "F402",
    "F541",
    "F811",
    "F841",
    "F823",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: integration tests",
    "slow: slow tests",
    "load: load and throughput tests",
    "fault: fault scenario tests",
    "e2e: end-to-end workflow tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["src/**/__pycache__/**"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "if __name__",
    "raise NotImplementedError",
]
