[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-platform-simple-momentum-plugin"
version = "0.1.0"
description = "Example V6 strategy plugin for quant-stock"
requires-python = ">=3.10"

[project.entry-points."quant_platform.strategy"]
simple_momentum = "simple_momentum_plugin:SimpleMomentumStrategy"
